--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* -----------------------------------------
+Default style
+-------------------------------------------- */
+html {
+    font-size: 16px;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #C4C3D0;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 100;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  /* every tag */
+  *,
+  *::before,
+  *::after {
+    box-sizing: inherit;
   }
-  to {
-    transform: rotate(360deg);
+  body {
+    margin: 0;
   }
-}
+  
+  :root {
+    --primary-color: #FFB6C1;
+  }
+  
+  .header-img {
+    width: 90%;
+    max-width: 720px;
+  }
+  /* -----------------------------------------
+  Typpgraphy
+  -------------------------------------------- */
+  h1 {
+    color: black;
+    /* height: 80px; */
+    /* background: url(pics/burnPaper.png) center no-repeat; */
+    background-size: 375px 100%;
+    margin-top: 30px;
+    text-align: center;
+    /* font-family: "Brush Script MT", cursive;
+      font-family: fantasy;
+      font-size: 24px;
+      font-variant: normal;
+      font-weight: bold;
+      line-height: 480%; */
+  }
+  
+  /* -----------------------------------------
+  Layout
+  -------------------------------------------- */
+  .max-container {
+    max-width: 900px;
+    margin: auto;
+  }
+  .flex {
+    display: flex;
+  }
+  .flex.right {
+    justify-content: flex-end;
+    width: 100%;
+  }
+  
+  /*
+  title font style is genereated with this website: https://www.fontspace.com/harry-p-font-f44342
+  */
+  
